2005-09-15  Kevin Layer  <layer@gemini>

	* loadgtk20.cl: bug15544: from cox

2005-06-10  Duane Rettig  <duane@gemini>

	* eh.cl: Add standard in-case-mode headers
	* gtk20.cl: Add standard in-case-mode headers; add extra
	ff call needed by cg
	* loadgtk20.cl: Fix compilation speed of gtk20.cl; Add
	in-case-mode changes

2005-04-12  Kevin Layer  <layer@gemini>

	* gtk20.cl: comment out the case mode check/error

2005-04-11  Charles A. Cox  <cox@fritter>

	* gtk20.cl: Restored symbols from gdk/gdkkeysyms.h except those
	with case problems.

2005-04-11  Charles A. Cox  <cox@gemini>

	* gtk20.cl: Name changes to allow gtk in ANSI mode.
	* loadgtk20.cl: Remove use of :invert readtable-case.  Also
	bug14934 fix from acl70 branch.

*******************************************************************************
post-7.0 release

2004-11-08  Charles A. Cox  <cox@fritter>

	* loadgtk20.cl: eliminate lp usage.

*******************************************************************************

2004-08-31  Charles A. Cox  <cox@gemini>

	* loadgtk20.cl: pkg-config on redhat9 seems to expect it is being
	used by cc instead of ld.  So, we change it here.

2003-12-31  Charles A. Cox  <cox@gemini>

	* cdbind.cl: bug13705 fix.

2003-07-14  Charles A. Cox  <cox@fritter>

	* gtk12.cl, gtk20.cl: no longer using skip-in-ansi-mode.  Add
	various macros.
	* loadgtk20.cl: Don't compile gtk20.cl (too big for trial).

2003-05-13  Charles A. Cox  <cox@fritter>

	* gtk20.cl: Added constants from gdk/gdkkeysyms.h

2003-05-13  Charles A. Cox  <cox@fritter>

  From acl6 branch (marked with "b> ").
  Join command used: cvs update -d -j acl6_to_trunk_join3 -j acl6 gtk

b> 2003-05-13  Charles A. Cox  <cox@fritter>
b> 
b>   From acl62 branch (marked with "b> ").
b>   Join command used: cvs update -d -j acl62_to_acl6_join2 -j acl62 gtk
b> 
b> b> 2003-01-21  Kevin Layer  <layer@crikey>
b> b> 
b> b> 	* makedist.cl: only delete directory and files if they